[package]
name = "gdb-command"
version = "0.5.2"
authors = ["Andrey Fedotov  <fedotoff@ispras.ru>", "Alexey Vishnyakov  <vishnya@ispras.ru>", "Avgor46"]
edition = "2018"
description = "Wrapper for gdb in batch mode."
readme = "README.md"
keywords = [ "gdb", "backtrace", "stacktrace", "debugging", "coredump"]
repository = "https://github.com/anfedotoff/gdb-command.git"
homepage = "https://github.com/anfedotoff/gdb-command.git"
license = "MIT"
exclude = ["/tests", ".gitignore", ".github"]

[dependencies]
regex = "1.5.4"
