[package]
name = "gdb-command"
version = "0.7.7"
authors = ["Andrey Fedotov  <fedotoff@ispras.ru>", "Alexey Vishnyakov <vishnya@ispras.ru>", "Georgy Savidov <avgor46@ispras.ru>"]
edition = "2021"
description = "Wrapper for gdb in batch mode."
readme = "README.md"
keywords = [ "gdb", "backtrace", "stacktrace", "debugging", "coredump"]
repository = "https://github.com/anfedotoff/gdb-command.git"
homepage = "https://github.com/anfedotoff/gdb-command.git"
license = "MIT"
exclude = ["/tests", ".gitignore", ".github"]

[dependencies]
regex = "1"
wait-timeout = "0.2"
